# MediaCraft

./: .gitignore  MediaCraft.bat  MediaCraft.spec  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements-lock.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/: video_player_spec.md
scripts/: build_windows.ps1  collect_licenses.py  generate_icon.py  setup_mpv.py
src/mediacraft/: __init__.py  __main__.py
src/mediacraft/app/: __init__.py  application.py  logging_config.py  settings.py  single_instance.py
src/mediacraft/frame/: __init__.py  frame_controller.py  media_probe.py
src/mediacraft/media/: __init__.py  audio_metadata.py  avi_info.py  codec_names.py
src/mediacraft/player/: __init__.py  adaptive_backend.py  mpv_backend.py  playback_state.py  player_backend.py  player_controller.py  windows_media_backend.py
src/mediacraft/playlist/: __init__.py  metadata_probe.py  playlist_controller.py
src/mediacraft/repeat/: __init__.py  ab_repeat_controller.py
src/mediacraft/screenshot/: __init__.py  file_naming.py
src/mediacraft/thumbnail/: __init__.py  thumbnail_cache.py  thumbnail_provider.py
src/mediacraft/ui/: __init__.py  control_bar.py  direct_slider.py  fullscreen_overlay.py  main_window.py  playlist_panel.py  settings_dialog.py  shortcut_dialog.py  thumbnail_preview.py  toast_notification.py  (+1 more)
tests/: conftest.py  test_ab_repeat_controller.py  test_application.py  test_audio_metadata.py  test_avi_info.py  test_codec_names.py  test_control_bar.py  test_frame_controller.py  test_logging_config.py  test_main_window.py  test_media_probe.py  test_mpv_backend.py  test_player_controller.py  test_playlist_controller.py  test_playlist_metadata_probe.py  test_playlist_panel.py  test_screenshot_file_naming.py  test_settings.py  test_shortcut_dialog.py  test_thumbnail_cache.py  test_thumbnail_preview.py  test_thumbnail_provider.py  test_time_format.py  test_video_widget.py  test_windows_media_backend.py
(+3 files in other folders)
