[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mediacraft"
version = "0.1.0"
description = "A Windows desktop video player for comfortable frame-by-frame inspection"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "av>=18,<19",
    "PySide6>=6.10,<7",
    "mpv==1.0.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "pytest-qt>=4.5,<5",
]

[project.scripts]
mediacraft = "mediacraft.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
